# scheduler_platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/core/: urls.py  views.py
apps/scheduling/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/scheduling/migrations/: 0001_initial.py
config/: settings.py  urls.py
nginx/: default.conf
templates/: base.html
templates/scheduling/: booking_success.html  manager_bookings.html  my_bookings.html  resource_detail.html  resource_list.html
